Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2846255 by drunken monkey: Fixed displayed order of processors in UI.
- #2656916 by drunken monkey: Removed unused field dependency calculation
  method.
- #2844192 by BR0kEN, drunken monkey: Fixed failure in DB backend when setting
  field boost from 0 to other value.
- #2847588 by Nick_vh, drunken monkey: Improved the description of the
  search_api_views_taxonomy module.
- #2843632 by beram, drunken monkey: Fixed "contains any" for Views fulltext
  contextual filter.
- #2842971 by jespermb, borisson_: Fixed wrong URL for block search displays.
- #2842546 by alan-ps: Fixed Drush commands for enabling and disabling indexes.
- #2840675 by nicrodgers, drunken monkey: Added support for Views filters with
  option lists.
- #2841550 by drunken monkey: Fixed execution of pending tasks.
- #2841827 by umed91, drunken monkey: Fixed some code style issues.
- #2682615 by drunken monkey: Added tests for object serialization and cloning.
- #2794879 by drunken monkey: Added property paths to the "Fields" tab.
- #2840261 by alan-ps: Fixed usage of outdated hash functions.

Search API 1.0, Beta 3 (2016-10-24):
------------------------------------
- #2839981 by borisson_, drunken monkey: Fixed search ID for non-page views.
- #2834350 by alan-ps: Fixed missing field restriction in DB backend
  autocomplete code.
- #2809469 by StryKaizer, borisson_, drunken monkey, pfrenssen: Fixed
  incompatible cache modes used for Search API views.
- #2839142 by borisson_, drunken monkey: Added new test for Defaults module
  index creation.
- #2831436 by borisson_, drunken monkey: Added dependency information to
  display plugins.
- #2836994 by dermario: Fixed order of facets in DB backend unreliable.
- #2839445 by borisson_: Fixed test failure in for some Core versions.
- #2833229 by timcosgrove: Removed array type hinting for batch contexts.
- #2656052 by drunken monkey: Removed the "plugin_id"/"settings" sub-level of